Fix numpy and pandas install order and versions for Render deployment

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,9 @@ FROM python:3.10-slim-bullseye
 
 # Install system dependencies for pandas and build tools
 RUN apt-get update && apt-get install -y build-essential python3-dev libatlas-base-dev
+RUN pip install --upgrade pip setuptools wheel
+RUN pip install numpy==1.24.4
+RUN pip install -r requirements.txt
 
 # Set working directory inside the container
 WORKDIR /app
