Fix Dockerfile and requirements for Render deploy with numpy/pandas compatibility

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,22 +1,20 @@
-# Use official Python image with a compatible version
 FROM python:3.10-slim-bullseye
 
-
-# Install system dependencies for pandas and build tools
-RUN apt-get update && apt-get install -y build-essential python3-dev libatlas-base-dev
-RUN pip install --upgrade pip setuptools wheel
-RUN pip install numpy==1.24.4
-RUN pip install -r requirements.txt
-
-# Set working directory inside the container
+# Set working directory
 WORKDIR /app
 
-# Copy all backend files to the container
-COPY . /app
+# Copy requirements.txt first for caching
+COPY requirements.txt .
 
-# Upgrade pip and install Python dependencies
+# Upgrade pip and install numpy first to avoid incompatibility
 RUN pip install --upgrade pip setuptools wheel
+RUN pip install numpy==1.24.4
+
+# Install rest of dependencies
 RUN pip install -r requirements.txt
 
-# Command to run the Flask app with gunicorn
-CMD gunicorn app:app --bind 0.0.0.0:$PORT
+# Copy all other source code files
+COPY . .
+
+# Start the Flask app with gunicorn, binding to Render's port
+CMD ["sh", "-c", "gunicorn app:app --bind 0.0.0.0:$PORT"]
